--- a/IT3013_ASSN1/222660_ASSN1.ipynb
+++ b/IT3013_ASSN1/222660_ASSN1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "e24dc950-3977-44c7-b773-433c87197e1e",
    "metadata": {},
    "outputs": [],
@@ -273,111 +273,111 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "37/37 [==============================] - 97s 34ms/step - loss: 1.7417 - accuracy: 0.2631 - val_loss: 1.6011 - val_accuracy: 0.3891\n",
+      "37/37 [==============================] - 4s 33ms/step - loss: 1.7579 - accuracy: 0.2530 - val_loss: 1.6675 - val_accuracy: 0.4043\n",
       "Epoch 2/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 1.4197 - accuracy: 0.4382 - val_loss: 1.1635 - val_accuracy: 0.5805\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 1.5155 - accuracy: 0.4205 - val_loss: 1.1933 - val_accuracy: 0.5714\n",
       "Epoch 3/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 1.1380 - accuracy: 0.5635 - val_loss: 0.9909 - val_accuracy: 0.6322\n",
+      "37/37 [==============================] - 1s 21ms/step - loss: 1.1403 - accuracy: 0.5525 - val_loss: 0.9912 - val_accuracy: 0.6261\n",
       "Epoch 4/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.9484 - accuracy: 0.6337 - val_loss: 0.8637 - val_accuracy: 0.6900\n",
+      "37/37 [==============================] - 1s 22ms/step - loss: 0.9705 - accuracy: 0.6261 - val_loss: 0.8340 - val_accuracy: 0.6900\n",
       "Epoch 5/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.8524 - accuracy: 0.6709 - val_loss: 0.7839 - val_accuracy: 0.7173\n",
+      "37/37 [==============================] - 1s 22ms/step - loss: 0.8618 - accuracy: 0.6633 - val_loss: 0.8422 - val_accuracy: 0.6748\n",
       "Epoch 6/50\n",
-      "37/37 [==============================] - 1s 22ms/step - loss: 0.7653 - accuracy: 0.7191 - val_loss: 0.7374 - val_accuracy: 0.7204\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.7888 - accuracy: 0.6920 - val_loss: 0.7120 - val_accuracy: 0.7295\n",
       "Epoch 7/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.6792 - accuracy: 0.7547 - val_loss: 0.6588 - val_accuracy: 0.7690\n",
+      "37/37 [==============================] - 1s 22ms/step - loss: 0.6930 - accuracy: 0.7403 - val_loss: 0.6856 - val_accuracy: 0.7416\n",
       "Epoch 8/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.5986 - accuracy: 0.7885 - val_loss: 0.6566 - val_accuracy: 0.7690\n",
+      "37/37 [==============================] - 1s 22ms/step - loss: 0.6561 - accuracy: 0.7606 - val_loss: 0.6302 - val_accuracy: 0.7660\n",
       "Epoch 9/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.5332 - accuracy: 0.8266 - val_loss: 0.4920 - val_accuracy: 0.8450\n",
+      "37/37 [==============================] - 1s 21ms/step - loss: 0.6050 - accuracy: 0.7766 - val_loss: 0.7002 - val_accuracy: 0.7264\n",
       "Epoch 10/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.4686 - accuracy: 0.8384 - val_loss: 0.5125 - val_accuracy: 0.8298\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.5815 - accuracy: 0.7860 - val_loss: 0.5408 - val_accuracy: 0.8055\n",
       "Epoch 11/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.4400 - accuracy: 0.8469 - val_loss: 0.4367 - val_accuracy: 0.8632\n",
+      "37/37 [==============================] - 1s 25ms/step - loss: 0.4652 - accuracy: 0.8384 - val_loss: 0.4420 - val_accuracy: 0.8693\n",
       "Epoch 12/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.3919 - accuracy: 0.8680 - val_loss: 0.4150 - val_accuracy: 0.8571\n",
+      "37/37 [==============================] - 1s 24ms/step - loss: 0.4430 - accuracy: 0.8409 - val_loss: 0.4918 - val_accuracy: 0.8359\n",
       "Epoch 13/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.3545 - accuracy: 0.8849 - val_loss: 0.4082 - val_accuracy: 0.8571\n",
+      "37/37 [==============================] - 1s 24ms/step - loss: 0.4179 - accuracy: 0.8579 - val_loss: 0.4294 - val_accuracy: 0.8571\n",
       "Epoch 14/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.3301 - accuracy: 0.8883 - val_loss: 0.4037 - val_accuracy: 0.8541\n",
+      "37/37 [==============================] - 1s 26ms/step - loss: 0.3804 - accuracy: 0.8672 - val_loss: 0.4020 - val_accuracy: 0.8723\n",
       "Epoch 15/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.3501 - accuracy: 0.8689 - val_loss: 0.4076 - val_accuracy: 0.8663\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.3684 - accuracy: 0.8756 - val_loss: 0.3917 - val_accuracy: 0.8632\n",
       "Epoch 16/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.3233 - accuracy: 0.8816 - val_loss: 0.3506 - val_accuracy: 0.8936\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.3519 - accuracy: 0.8773 - val_loss: 0.4197 - val_accuracy: 0.8571\n",
       "Epoch 17/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.2791 - accuracy: 0.9036 - val_loss: 0.4192 - val_accuracy: 0.8571\n",
+      "37/37 [==============================] - 1s 22ms/step - loss: 0.2998 - accuracy: 0.9036 - val_loss: 0.4450 - val_accuracy: 0.8602\n",
       "Epoch 18/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.3183 - accuracy: 0.8892 - val_loss: 0.3708 - val_accuracy: 0.8784\n",
+      "37/37 [==============================] - 1s 24ms/step - loss: 0.3192 - accuracy: 0.8942 - val_loss: 0.3932 - val_accuracy: 0.8784\n",
       "Epoch 19/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.2875 - accuracy: 0.9027 - val_loss: 0.3556 - val_accuracy: 0.8906\n",
+      "37/37 [==============================] - 1s 24ms/step - loss: 0.2936 - accuracy: 0.8866 - val_loss: 0.3373 - val_accuracy: 0.8936\n",
       "Epoch 20/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.2338 - accuracy: 0.9239 - val_loss: 0.3484 - val_accuracy: 0.8906\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.2595 - accuracy: 0.9002 - val_loss: 0.3620 - val_accuracy: 0.8875\n",
       "Epoch 21/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.2332 - accuracy: 0.9239 - val_loss: 0.3386 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.2485 - accuracy: 0.9205 - val_loss: 0.3684 - val_accuracy: 0.8723\n",
       "Epoch 22/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.2151 - accuracy: 0.9162 - val_loss: 0.3732 - val_accuracy: 0.8936\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.2173 - accuracy: 0.9306 - val_loss: 0.4136 - val_accuracy: 0.8815\n",
       "Epoch 23/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.1931 - accuracy: 0.9315 - val_loss: 0.3473 - val_accuracy: 0.8906\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.2173 - accuracy: 0.9205 - val_loss: 0.3491 - val_accuracy: 0.8906\n",
       "Epoch 24/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.2058 - accuracy: 0.9247 - val_loss: 0.3366 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 1s 24ms/step - loss: 0.2252 - accuracy: 0.9171 - val_loss: 0.4589 - val_accuracy: 0.8541\n",
       "Epoch 25/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.1816 - accuracy: 0.9365 - val_loss: 0.3020 - val_accuracy: 0.8967\n",
+      "37/37 [==============================] - 1s 23ms/step - loss: 0.2343 - accuracy: 0.9171 - val_loss: 0.3607 - val_accuracy: 0.8906\n",
       "Epoch 26/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.1584 - accuracy: 0.9459 - val_loss: 0.3143 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 1s 32ms/step - loss: 0.1905 - accuracy: 0.9391 - val_loss: 0.3686 - val_accuracy: 0.8784\n",
       "Epoch 27/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.1442 - accuracy: 0.9509 - val_loss: 0.3792 - val_accuracy: 0.8906\n",
+      "37/37 [==============================] - 1s 31ms/step - loss: 0.1748 - accuracy: 0.9399 - val_loss: 0.4465 - val_accuracy: 0.8754\n",
       "Epoch 28/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.1876 - accuracy: 0.9281 - val_loss: 0.3157 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 1s 32ms/step - loss: 0.2093 - accuracy: 0.9272 - val_loss: 0.4093 - val_accuracy: 0.8754\n",
       "Epoch 29/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.1443 - accuracy: 0.9535 - val_loss: 0.3372 - val_accuracy: 0.8845\n",
+      "37/37 [==============================] - 1s 34ms/step - loss: 0.1568 - accuracy: 0.9467 - val_loss: 0.3213 - val_accuracy: 0.9027\n",
       "Epoch 30/50\n",
-      "37/37 [==============================] - 1s 26ms/step - loss: 0.1669 - accuracy: 0.9332 - val_loss: 0.3342 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 1s 32ms/step - loss: 0.1702 - accuracy: 0.9459 - val_loss: 0.3288 - val_accuracy: 0.8906\n",
       "Epoch 31/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.1329 - accuracy: 0.9569 - val_loss: 0.3234 - val_accuracy: 0.8875\n",
+      "37/37 [==============================] - 1s 34ms/step - loss: 0.1481 - accuracy: 0.9475 - val_loss: 0.4360 - val_accuracy: 0.8511\n",
       "Epoch 32/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.1408 - accuracy: 0.9484 - val_loss: 0.3961 - val_accuracy: 0.8906\n",
+      "37/37 [==============================] - 1s 35ms/step - loss: 0.1289 - accuracy: 0.9569 - val_loss: 0.4568 - val_accuracy: 0.8784\n",
       "Epoch 33/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.1201 - accuracy: 0.9535 - val_loss: 0.3302 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.1450 - accuracy: 0.9518 - val_loss: 0.3573 - val_accuracy: 0.8936\n",
       "Epoch 34/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.1161 - accuracy: 0.9585 - val_loss: 0.3116 - val_accuracy: 0.9088\n",
+      "37/37 [==============================] - 2s 37ms/step - loss: 0.1064 - accuracy: 0.9645 - val_loss: 0.3736 - val_accuracy: 0.8723\n",
       "Epoch 35/50\n",
-      "37/37 [==============================] - 1s 26ms/step - loss: 0.1184 - accuracy: 0.9628 - val_loss: 0.2887 - val_accuracy: 0.9119\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.1167 - accuracy: 0.9619 - val_loss: 0.3331 - val_accuracy: 0.9027\n",
       "Epoch 36/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.0910 - accuracy: 0.9738 - val_loss: 0.3184 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.0910 - accuracy: 0.9712 - val_loss: 0.3504 - val_accuracy: 0.8936\n",
       "Epoch 37/50\n",
-      "37/37 [==============================] - 1s 22ms/step - loss: 0.0786 - accuracy: 0.9721 - val_loss: 0.3220 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.0835 - accuracy: 0.9755 - val_loss: 0.3660 - val_accuracy: 0.8936\n",
       "Epoch 38/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.0671 - accuracy: 0.9805 - val_loss: 0.3298 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.0901 - accuracy: 0.9721 - val_loss: 0.4305 - val_accuracy: 0.8815\n",
       "Epoch 39/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.0812 - accuracy: 0.9721 - val_loss: 0.3190 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 2s 39ms/step - loss: 0.1098 - accuracy: 0.9602 - val_loss: 0.3748 - val_accuracy: 0.8875\n",
       "Epoch 40/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.0721 - accuracy: 0.9788 - val_loss: 0.3099 - val_accuracy: 0.9119\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.1017 - accuracy: 0.9628 - val_loss: 0.3376 - val_accuracy: 0.8967\n",
       "Epoch 41/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.0863 - accuracy: 0.9729 - val_loss: 0.3359 - val_accuracy: 0.9058\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.0859 - accuracy: 0.9721 - val_loss: 0.3327 - val_accuracy: 0.8997\n",
       "Epoch 42/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.0697 - accuracy: 0.9788 - val_loss: 0.3225 - val_accuracy: 0.9088\n",
+      "37/37 [==============================] - 2s 41ms/step - loss: 0.0618 - accuracy: 0.9780 - val_loss: 0.3667 - val_accuracy: 0.9088\n",
       "Epoch 43/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.0674 - accuracy: 0.9772 - val_loss: 0.3623 - val_accuracy: 0.8997\n",
+      "37/37 [==============================] - 2s 38ms/step - loss: 0.0932 - accuracy: 0.9729 - val_loss: 0.4038 - val_accuracy: 0.8845\n",
       "Epoch 44/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.0587 - accuracy: 0.9839 - val_loss: 0.3852 - val_accuracy: 0.9088\n",
+      "37/37 [==============================] - 2s 40ms/step - loss: 0.0797 - accuracy: 0.9704 - val_loss: 0.3514 - val_accuracy: 0.9119\n",
       "Epoch 45/50\n",
-      "37/37 [==============================] - 1s 25ms/step - loss: 0.0753 - accuracy: 0.9738 - val_loss: 0.3351 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 2s 40ms/step - loss: 0.0854 - accuracy: 0.9679 - val_loss: 0.3879 - val_accuracy: 0.8875\n",
       "Epoch 46/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.0545 - accuracy: 0.9865 - val_loss: 0.3158 - val_accuracy: 0.9088\n",
+      "37/37 [==============================] - 2s 39ms/step - loss: 0.0724 - accuracy: 0.9746 - val_loss: 0.3648 - val_accuracy: 0.9058\n",
       "Epoch 47/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.0518 - accuracy: 0.9839 - val_loss: 0.3386 - val_accuracy: 0.9149\n",
+      "37/37 [==============================] - 2s 37ms/step - loss: 0.0528 - accuracy: 0.9898 - val_loss: 0.4147 - val_accuracy: 0.8967\n",
       "Epoch 48/50\n",
-      "37/37 [==============================] - 1s 24ms/step - loss: 0.0582 - accuracy: 0.9814 - val_loss: 0.3585 - val_accuracy: 0.9027\n",
+      "37/37 [==============================] - 2s 37ms/step - loss: 0.1351 - accuracy: 0.9518 - val_loss: 0.4527 - val_accuracy: 0.8693\n",
       "Epoch 49/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.0592 - accuracy: 0.9839 - val_loss: 0.3581 - val_accuracy: 0.8967\n",
+      "37/37 [==============================] - 1s 36ms/step - loss: 0.0759 - accuracy: 0.9780 - val_loss: 0.3783 - val_accuracy: 0.9119\n",
       "Epoch 50/50\n",
-      "37/37 [==============================] - 1s 23ms/step - loss: 0.0520 - accuracy: 0.9822 - val_loss: 0.4067 - val_accuracy: 0.8723\n"
+      "37/37 [==============================] - 2s 39ms/step - loss: 0.0450 - accuracy: 0.9873 - val_loss: 0.3988 - val_accuracy: 0.9027\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x27051da6f50>"
+       "<keras.callbacks.History at 0x12d8eb56140>"
       ]
      },
      "execution_count": 7,
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "6d31ab80-b28f-452b-b0fc-1fabaa9225bb",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rottenoranges\n"
+      "freshapples\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a49150d2-207a-423b-bb33-e38e97c66a43",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        " 'rottenoranges']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
