update for tensorboard

--- a/IT3013_ASSN1/222660_ASSN1.ipynb
+++ b/IT3013_ASSN1/222660_ASSN1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e24dc950-3977-44c7-b773-433c87197e1e",
    "metadata": {},
    "outputs": [],
@@ -540,9 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "caa4fdd8-d0fa-497d-88a1-d0a62d530512",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -556,13 +558,13 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-a3ba2ee6b582cce9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-c098c0b7f2088649\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-a3ba2ee6b582cce9\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-c098c0b7f2088649\");\n",
        "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6007;\n",
+       "          const port = 8088;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -581,7 +583,7 @@
    ],
    "source": [
     "%load_ext tensorboard\n",
-    "%tensorboard --logdir tb_logs"
+    "%tensorboard --logdir tb_logs --host localhost --port 8088"
    ]
   },
   {
